# rignore

./: .gitignore  .pdm-python  Cargo.toml  README.md  flake.nix  pyproject.toml  rignore.pyi
.github/actions/build-summary/: action.yml  generate_summary.py
.github/workflows/: CI.yml  post-summary-comment.yml
src/: lib.rs
tests/: test_walk.py
